# structured-agent-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/structured_agent_example/: agent.py  llm_service.py  real_llm_service.py
tests/: test_agent.py
