[project]
name = "structured-agent-example"
version = "0.1.0"
description = "A demonstration of structured development for a simple AI agent."
authors = [{ name = "VictorStackAI", email = "victor@victorstack.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
